Changed color palette

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -1,3 +1,14 @@
-$yellow-1: yellow;
-$black-1: black;
-$white-1: white;
+$blue-1: rgb(0, 123, 255);
+$blue-2: rgb(5, 104, 210);
+$grey-1: rgb(107, 117, 126);
+$grey-2: rgb(95, 105, 113);
+$green-1: rgb(40, 167, 69);
+$green-2: rgb(33, 138, 57);
+$red-1: rgb(220, 54, 69);
+$red-2: rgb(199, 48, 61);
+$yellow-1: #FFC108;
+$yellow-2: rgb(232, 175, 5);
+$darkGrey-1: rgb(52, 58, 64);
+$darkGrey-2: rgb(45, 50, 55);
+$black-1: rgb(19, 19, 19);
+$white-1: rgb(247, 247, 247);
