--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -6,12 +6,12 @@
   }
   .primary {
 		text-transform: uppercase;
-    font-weight: bold;
-    border: 2px solid $yellow-1;
+		font-weight: bold;
+		color: $white-1;
+    border: 2px solid $blue-2;
     &:hover {
 			color: $white-1;
-			background-color: $black-1;
-			border: 2px solid $black-1;
+			background-color: $blue-2;
 		}
 		&:active {
 			color: $black-1;
