Added secondary button and updated colors

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -7,11 +7,28 @@
   .primary {
 		text-transform: uppercase;
 		font-weight: bold;
+		background-color: $blue-1;
 		color: $white-1;
     border: 2px solid $blue-2;
     &:hover {
 			color: $white-1;
 			background-color: $blue-2;
+		}
+		&:active {
+			color: $black-1;
+			background-color: $white-1;
+			border: 2px solid $black-1;
+		}
+	}
+
+	.secondary {
+		text-transform: uppercase;
+		font-weight: bold;
+		background-color: $grey-1;
+		color: $white-1;
+    border: 2px solid $grey-2;
+    &:hover {
+			background-color: $grey-2;
 		}
 		&:active {
 			color: $black-1;
