--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -1,5 +1,7 @@
 $blue-1: rgb(0, 123, 255);
 $blue-2: rgb(5, 104, 210);
+$aqua-1: rgb(24, 162, 184);
+$aqua-2: rgb(19, 139, 157);
 $grey-1: rgb(107, 117, 126);
 $grey-2: rgb(86, 95, 103);
 $green-1: rgb(40, 167, 69);
@@ -11,5 +13,6 @@ $yellow-2: rgb(232, 175, 5);
 $darkGrey-1: rgb(52, 58, 64);
 $darkGrey-2: rgb(45, 50, 55);
 $black-1: rgb(19, 19, 19);
+$black-2: rgb(38, 38, 38);
 $white-1: rgb(250, 250, 250);
 $white-2: rgb(230, 230, 230);
