Added an onClick event to each button

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -8,7 +8,7 @@ $green-1: rgb(40, 167, 69);
 $green-2: rgb(33, 138, 57);
 $red-1: rgb(220, 54, 69);
 $red-2: rgb(199, 48, 61);
-$yellow-1: #FFC108;
+$yellow-1: rgb(255, 193, 8);
 $yellow-2: rgb(232, 175, 5);
 $darkGrey-1: rgb(52, 58, 64);
 $darkGrey-2: rgb(45, 50, 55);
