--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -37,8 +37,7 @@
 	}
 	
   .disabled {
-    text-transform: uppercase;
-    font-weight: bold;
+    font-size: 1.1em;
     color: rgba(150, 149, 149, 0.26);
     background: rgba(0, 0, 0, 0.12);
     border: 2px solid rgba(0, 0, 0, 0.12);
