--- a/src/components/forms/forms.scss
+++ b/src/components/forms/forms.scss
@@ -12,7 +12,7 @@
     border-right: 2px solid $blue-2;
     border-bottom: 2px solid $blue-2;
 		border-left: 0;
-		font-size: 1.1em;
+		font-size: $button-font;
 		font-weight: unset;
   }
 }
