--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -16,3 +16,5 @@ $black-1: rgb(19, 19, 19);
 $black-2: rgb(38, 38, 38);
 $white-1: rgb(250, 250, 250);
 $white-2: rgb(230, 230, 230);
+
+$button-font: 1.07em;
