Added more options to styling

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -53,6 +53,18 @@ button:focus {
 	width: 200px;
 }
 
+.width300 {
+	width: 300px;
+}
+
+.margin15-left {
+	margin-left: 15px;
+}
+
+.margin15-right {
+	margin-right: 15px;
+}
+
 .radius15 {
   border-radius: 15px;
   -webkit-border-radius: 15px;
