Started header component. Functionality needs to be added.

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -17,4 +17,6 @@ $black-2: rgb(38, 38, 38);
 $white-1: rgb(250, 250, 250);
 $white-2: rgb(230, 230, 230);
 
+$border-2: 2px solid $blue-2;
+
 $font-size-1: 1.05em;
