--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,11 +1,16 @@
 @import "./var.scss";
 
 * {
-	outline: 0;
+  outline: 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  html{
+    box-sizing: border-box;
+    margin: 0 auto;
+  }
 }
 
 @mixin button-template($color1, $color2, $font1, $font2) {
-	font-size: $font-size-1;
+  font-size: $font-size-1;
   background-color: $color1;
   color: $font1;
   border: 2px solid $color2;
@@ -19,13 +24,13 @@
 }
 
 .pad2 {
-	padding-top: 2px;
-	padding-bottom: 2px;
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 .pad4 {
-	padding-top: 4px;
-	padding-bottom: 4px;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
 
 .pad8 {
@@ -34,16 +39,16 @@
 }
 
 .pad4-left {
-	padding-left: 4px;
+  padding-left: 4px;
 }
 
 .pad8-left {
-	padding-left: 8px;
+  padding-left: 8px;
 }
 
 .margin4 {
-	margin-top: 4px;
-	margin-bottom: 4px;
+  margin-top: 4px;
+  margin-bottom: 4px;
 }
 
 .width100 {
@@ -51,7 +56,7 @@
 }
 
 .width125 {
-	width: 125px;
+  width: 125px;
 }
 
 .width150 {
@@ -59,27 +64,35 @@
 }
 
 .width200 {
-	width: 200px;
+  width: 200px;
 }
 
 .width300 {
-	width: 300px;
+  width: 300px;
 }
 
 .margin15-left {
-	margin-left: 15px;
+  margin-left: 15px;
 }
 
 .margin15-right {
-	margin-right: 15px;
+  margin-right: 15px;
 }
 
 .radius5 {
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	-ms-border-radius: 5px;
-	-o-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.radius5-top {
+  border-radius: 5px 5px 0 0;
+  -webkit-border-radius: 5px 5px 0 0;
+  -moz-border-radius: 5px 5px 0 0;
+  -ms-border-radius: 5px 5px 0 0;
+  -o-border-radius: 5px 5px 0 0;
 }
 
 .radius15 {
@@ -89,6 +102,7 @@
   -ms-border-radius: 15px;
   -o-border-radius: 15px;
 }
+
 
 .radius15-left {
   border-radius: 15px 0 0 15px;
