--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,13 +5,23 @@
   margin: 5px 5px 0 5px;
   padding: 0 10px 0 10px;
   display: flex;
-  align-items: flex-end;
+  flex-direction: column;
+  justify-content: flex-end;
   background-color: $white-2;
+  background-image: url("../../images/header-background.svg");
+  background-size: 75px 75px;
+  background-position: center;
+
+  .title {
+    text-align: center;
+    font-size: $font-size-2;
+    padding-bottom: 20px;
+  }
 
   .navbar {
     display: flex;
-    Button {
-        margin-right: 10px;
+    button {
+      margin-right: 10px;
     }
   }
 }
