--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,15 +2,11 @@
 
 .header {
   height: 150px;
-  margin: 5px 5px 0 5px;
-  padding: 0 10px 0 10px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   background-color: $white-2;
-  background-image: url("../../images/header-background.svg");
-  background-size: 75px 75px;
-  background-position: center;
 
   .title {
     text-align: center;
@@ -20,6 +16,7 @@
 
   .navbar {
     display: flex;
+    padding: 0 10px;
     button {
       margin-right: 10px;
     }
