--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -1,3 +1,5 @@
+@import "./../../styles/common.scss";
+
 .flip-card {
   background-color: transparent;
   width: 200px;
@@ -12,8 +14,8 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: transform 0.6s;
     transform-style: preserve-3d;
+    transition: transform 0.6s;
     -webkit-transition: transform 0.6s;
     -moz-transition: transform 0.6s;
     -ms-transition: transform 0.6s;
@@ -26,31 +28,42 @@
       height: 100%;
       -webkit-backface-visibility: hidden;
       backface-visibility: hidden;
-      border-radius: 5px;
-      -webkit-border-radius: 5px;
-      -moz-border-radius: 5px;
-      -ms-border-radius: 5px;
-      -o-border-radius: 5px;
+      a {
+        text-decoration: none;
+        color: $white-2;
+        transition: all 0.3s;
+          -webkit-transition: all 0.3s;
+          -moz-transition: all 0.3s;
+          -ms-transition: all 0.3s;
+          -o-transition: all 0.3s;
+        &:hover {
+          letter-spacing: 0.7px;
+          transition: all 0.3s;
+          -webkit-transition: all 0.3s;
+          -moz-transition: all 0.3s;
+          -ms-transition: all 0.3s;
+          -o-transition: all 0.3s;
+}
+      }
     }
     .flip-card-front {
-      background-color: dodgerblue;
-      color: black;
+      background-color: $blue-1;
+      color: $black-1;
       display: flex;
       justify-content: center;
       align-items: center;
       img {
-        width: 150px;
-        border-radius: 5px;
-        -webkit-border-radius: 5px;
-        -moz-border-radius: 5px;
-        -ms-border-radius: 5px;
-        -o-border-radius: 5px;
+        width: 75%;
       }
     }
     .flip-card-back {
-      background-color: dodgerblue;
-      color: white;
+      background-color: $blue-1;
+      color: $white-1;
       transform: rotateY(180deg);
+      -webkit-transform: rotateY(180deg);
+      -moz-transform: rotateY(180deg);
+      -ms-transform: rotateY(180deg);
+      -o-transform: rotateY(180deg);
     }
   }
 }
