--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -77,16 +77,20 @@
     align-items: center;
     flex-direction: column;
     .card-header {
-      height: 10%;
+      width: 100%;
+      height: 75px;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
+      .card-header-item {
+        margin: 0 30px;
+      }
     }
     .card-body {
-      height: 80%;
+      height: calc(100% - 150px);
     }
     .card-footer {
-      height: 10%;
+      height: 75px;
       display: flex;
       justify-content: center;
       align-items: center;
