--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -181,3 +181,14 @@
 .backgroundWhite2 {
   background-color: $white-2;
 }
+
+.font-size-1 {
+  font-size: $font-size-1;
+}
+
+.font-size-2 {
+  font-size: $font-size-2;
+}
+.font-size-3 {
+  font-size: $font-size-3;
+}
