--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -76,21 +76,29 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    hr {
+      background-image: linear-gradient(to right, $white-2, $black-1, $white-2);
+      height: 1px;
+      width: 95%;
+      border: 0;
+    }
     .card-header {
       width: 100%;
-      height: 75px;
+      height: 50px;
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: flex-end;
       .card-header-item {
         margin: 0 30px;
       }
     }
     .card-body {
-      height: calc(100% - 150px);
+      height: calc(100% - 100px);
+      width: 100%;
     }
     .card-footer {
-      height: 75px;
+      width: 100%;
+      height: 50px;
       display: flex;
       justify-content: center;
       align-items: center;
