--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,6 +1,7 @@
 @import "./../../styles/common.scss";
 
 .footer {
+  font-size: $font-size-1;
   text-align: center;
   padding: 10px 0;
   background-color: $white-2;
