--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -9,6 +9,7 @@
   background-color: $white-2;
 
   .title {
+    color: $black-2;
     text-align: center;
     font-size: $font-size-3;
     padding-bottom: 15px;
