--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -7,6 +7,9 @@
   flex-direction: column;
   justify-content: flex-end;
   background-color: $white-2;
+  position: relative;
+  z-index: 1000;
+  box-shadow: 0px 3px 10px rgba(0,0,0,.2);
 
   .title {
     color: $black-2;
