Changed around some colors

--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -77,7 +77,8 @@
     align-items: center;
     flex-direction: column;
     color: $black-2;
-    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.05);
+    border: 1px solid rgba(118, 118, 118, 0.05);
     hr {
       background-image: linear-gradient(to right, $white-2, $black-2, $white-2);
       height: 1px;
