--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,10 +6,11 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  background-color: $white-2;
+  background-color: $white-1;
   position: relative;
   z-index: 1000;
-  box-shadow: 0px 3px 10px rgba(0,0,0,.2);
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.05);
+  border: 1px solid rgba(118, 118, 118, 0.05);
 
   .title {
     color: $black-2;
