--- a/src/App.scss
+++ b/src/App.scss
@@ -4,50 +4,12 @@
   box-sizing: border-box;
   margin: 0 40px;
   border: 1px solid $white-2;
-
-  .bubble1 {
-    background-color: $white-2;
-    height: calc(100% - 100px);
-    width: calc(100% - 100px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  .bubble2 {
-    background-color: $white-1;
-    height: calc(100% - 100px);
-    width: calc(100% - 100px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  .Home {
-    height: calc(100vh - 150px);
-    background-color: $white-1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .About {
-    height: calc(100vh - 40px);
-    padding: 20px;
-    background-color: $white-2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .Contact {
-    height: calc(100vh - 40px);
-    padding: 20px;
-    background-color: $white-1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .body {
+    #headshot {
+      height: 90%;
+      max-height: 521px;
+      border: 1px solid $white-2;
+      box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.05);
+    }
   }
 }
