--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -87,7 +87,7 @@
     }
     .card-header {
       width: 100%;
-      height: 50px;
+      height: 60px;
       display: flex;
       justify-content: space-between;
       align-items: flex-end;
@@ -100,8 +100,11 @@
       }
     }
     .card-body {
-      height: calc(100% - 100px);
-      width: 100%;
+      height: calc(100% - 110px);
+      width: calc(100% - 60px);
+      display: flex;
+      justify-self: center;
+      align-items: center;
     }
     .card-footer {
       width: 100%;
