--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -79,6 +79,7 @@
     color: $black-2;
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.05);
     border: 1px solid rgba(118, 118, 118, 0.05);
+    height: 100%;
     hr {
       background-image: linear-gradient(to right, $white-2, $black-2, $white-2);
       height: 1px;
