--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -67,6 +67,11 @@
   padding-bottom: 8px;
 }
 
+.pad20 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 .pad4-left {
   padding-left: 4px;
 }
@@ -78,6 +83,11 @@
 .margin4 {
   margin-top: 4px;
   margin-bottom: 4px;
+}
+
+.margin30 {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .width100 {
@@ -111,6 +121,11 @@
 .boxSizeFullScreenMargin100 {
   height: calc(100% - 100px);
   width: calc(100% - 100px);
+}
+
+.boxSize500x1000 {
+  height: 500px;
+  width: 1000px;
 }
 
 .boxSize300x600 {
