Finished up icon component

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,7 +18,11 @@
           line-height: 1.4em;
           font-size: 1.4em;
           margin: 0 30px;
-          height: 250px;
+          height: 255px;
+        }
+        .social-media-icons {
+          display: flex;
+          padding: 0 30px;
         }
       }
     }
