--- a/src/components/icons/icons.scss
+++ b/src/components/icons/icons.scss
@@ -1,10 +1,10 @@
 .Socialmedia {
-  margin: 0 30px;
   display: flex;
   align-items: center;
+  margin-right: 20px;
   img {
     height: 45px;
-    margin-right: 30px;
+    width: 45px;
     transition: 0.3s;
     -webkit-transition: 0.3s;
     -moz-transition: 0.3s;
