--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -68,18 +68,10 @@
   }
 }
 .section-card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   .card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
     color: $black-2;
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.05);
     border: 1px solid rgba(118, 118, 118, 0.05);
-    height: 100%;
     hr {
       background-image: linear-gradient(to right, $white-2, $black-2, $white-2);
       height: 1px;
@@ -87,32 +79,19 @@
       border: 0;
     }
     .card-header {
-      width: 100%;
-      height: 60px;
       display: flex;
       justify-content: space-between;
-      align-items: flex-end;
-      .card-header-item {
-        img {
-          height: 35px;
-        }
-        margin: 0 30px;
-        font-weight: bold;
+      margin: 10px 30px;
+      img {
+        height: 35px;
       }
     }
     .card-body {
-      height: calc(100% - 110px);
-      width: calc(100% - 60px);
-      display: flex;
-      justify-self: center;
-      align-items: center;
+      margin: 0 30px;
     }
     .card-footer {
-      width: 100%;
-      height: 50px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      margin: 0 30px;
+      height: 40px;
     }
   }
 }
