--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -5,6 +5,5 @@
   text-align: center;
   padding: 10px 0;
   background-color: $white-1;
-  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.05);
-  border: 1px solid rgba(118, 118, 118, 0.05);
+  width: 100vw;
 }
