--- a/src/components/icons/icons.scss
+++ b/src/components/icons/icons.scss
@@ -1,7 +1,7 @@
 .Socialmedia {
   display: flex;
   align-items: center;
-  margin-right: 20px;
+  margin: 0 10px;
   img {
     height: 45px;
     width: 45px;
@@ -24,3 +24,4 @@
     }
   }
 }
+
