--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -22,3 +22,7 @@ $border-2: 2px solid $blue-2;
 $font-size-1: 1.05em;
 $font-size-2: 2em;
 $font-size-3: 5em;
+
+$break-1: 1000px;
+$break-2: 800px;
+$break-3: 400px;
