--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -53,7 +53,7 @@
       justify-content: center;
       align-items: center;
       img {
-        width: 75%;
+        height: 75%;
       }
     }
     .flip-card-back {
