--- a/src/App.scss
+++ b/src/App.scss
@@ -17,7 +17,23 @@
     .mid-section,
     .bottom-section {
       width: 90%;
+      height: 100%;
       max-width: 1200px;
+      .form-component {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .form-message {
+        text-align: center;
+        margin: 20px 0;
+        p {
+          margin: 5px 0;
+        }
+        span {
+          display: inline;
+        }
+      }
     }
   }
   .footer {
