Set it up so that the demo page can be reset after the email form is used

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,6 +33,9 @@
         span {
           display: inline;
         }
+        .button-reset {
+          margin: 5px 0;
+        }
       }
     }
   }
