--- a/src/components/icons/icons.scss
+++ b/src/components/icons/icons.scss
@@ -1,15 +1,27 @@
-.Socialmedia {
+@import "./../../styles/common.scss";
+
+.social-media {
   display: flex;
+  justify-content: center;
   align-items: center;
+  flex-direction: column;
   margin: 0 10px;
-  img {
-    height: 45px;
-    width: 45px;
+  &:hover .social-media-text {
+    color: rgba(15, 15, 15, 0.8);
     transition: 0.3s;
     -webkit-transition: 0.3s;
     -moz-transition: 0.3s;
     -ms-transition: 0.3s;
     -o-transition: 0.3s;
+  }
+  img {
+    height: 45px;
+    width: 45px;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
     &:hover {
       transform: scale(1.2);
       transition: 0.3s;
@@ -22,5 +34,15 @@
       -ms-transition: 0.3s;
       -o-transition: 0.3s;
     }
+  }
+  .social-media-text {
+    font-size: 0.8em;
+    margin-top: 3px;
+    color: rgba(15, 15, 15, 0);
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
   }
 }
