--- a/src/components/icons/icons.scss
+++ b/src/components/icons/icons.scss
@@ -5,15 +5,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 0 10px;
-  &:hover .social-media-text {
-    color: rgba(15, 15, 15, 0.8);
-    transition: 0.3s;
-    -webkit-transition: 0.3s;
-    -moz-transition: 0.3s;
-    -ms-transition: 0.3s;
-    -o-transition: 0.3s;
-  }
+  margin: 0 8px;
+  
   img {
     height: 45px;
     width: 45px;
@@ -23,17 +16,17 @@
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
     &:hover {
-      transform: scale(1.2);
+      transform: scale(1.15);
       transition: 0.3s;
-      -webkit-transform: scale(1.2);
-      -moz-transform: scale(1.2);
-      -ms-transform: scale(1.2);
-      -o-transform: scale(1.2);
+      -webkit-transform: scale(1.15);
+      -moz-transform: scale(1.15);
+      -ms-transform: scale(1.15);
+      -o-transform: scale(1.15);
       -webkit-transition: 0.3s;
       -moz-transition: 0.3s;
       -ms-transition: 0.3s;
       -o-transition: 0.3s;
-    }
+}
   }
   .social-media-text {
     font-size: 0.8em;
@@ -44,5 +37,15 @@
     -moz-transition: 0.3s;
     -ms-transition: 0.3s;
     -o-transition: 0.3s;
+  }
+  .social-media-img {
+    &:hover ~ .social-media-text {
+      color: rgba(15, 15, 15, 0.8);
+      transition: 0.3s;
+      -webkit-transition: 0.3s;
+      -moz-transition: 0.3s;
+      -ms-transition: 0.3s;
+      -o-transition: 0.3s;
+    }
   }
 }
