Cleaned up a few minor things

--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -68,6 +68,9 @@
       -moz-transform: rotateY(180deg);
       -ms-transform: rotateY(180deg);
       -o-transform: rotateY(180deg);
+      p {
+        padding: 0 10px;
+      }
     }
   }
 }
